<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyleft (/c) MMXV, Proxy.sh
 ~ Distributed under the GNU GPL v2
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/control_horizontal_margin"
        android:layout_marginRight="@dimen/control_horizontal_margin"
        android:layout_marginTop="@dimen/headline_vertical_margin"
        android:paddingBottom="@dimen/control_vertical_margin"
        android:background="@drawable/panel_rounded_edge" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/control_vertical_margin"
            android:layout_marginTop="@dimen/headline_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/control_horizontal_margin"
                android:layout_marginRight="@dimen/control_horizontal_margin"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/StatePanelTextColor" />

            <TextView
                android:id="@+id/textCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unknown"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/StatePanelTextColor"
                android:textStyle="bold" />
        </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow5"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginLeft="@dimen/control_horizontal_margin"
                android:layout_marginTop="@dimen/control_vertical_margin"
                android:paddingBottom="@dimen/control_vertical_margin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/label_space"
                    android:text="@string/load"
                    android:textColor="@color/StatePanelTextColor" />

                <TextView
                    android:id="@+id/textLoad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/StatePanelTextColor"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow6"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tableRow5"
                android:layout_marginLeft="@dimen/control_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/label_space"
                    android:text="@string/ip_address"
                    android:textColor="@color/StatePanelTextColor" />

                <TextView
                    android:id="@+id/textIp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/StatePanelTextColor"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow7"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tableRow6"
                android:layout_marginLeft="@dimen/control_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/label_space"
                    android:text="@string/in_bytes"
                    android:textColor="@color/StatePanelTextColor" />

                <TextView
                    android:id="@+id/textInBytes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/StatePanelTextColor"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow2"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginRight="@dimen/control_horizontal_margin"
                android:layout_marginTop="@dimen/control_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/label_space"
                    android:text="@string/port"
                    android:textColor="@color/StatePanelTextColor" />

                <TextView
                    android:id="@+id/textPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/StatePanelTextColor"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tableRow2"
                android:layout_marginRight="@dimen/control_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/label_space"
                    android:text="Out:"
                    android:textColor="@color/StatePanelTextColor" />

                <TextView
                    android:id="@+id/textOutBytes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/StatePanelTextColor"
                    android:textStyle="bold" />
            </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tableRow7"
            android:background="@color/ActionLineColor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:paddingTop="@dimen/control_vertical_margin"
            android:paddingBottom="@dimen/control_vertical_margin"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/textState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/control_vertical_margin"
                android:layout_marginTop="@dimen/control_vertical_margin"
                android:text="@string/disconnected_note"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/DisconnectedTextColor" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/headline_vertical_margin" >

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loggined_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/HintTextColor" />

        <TextView
            android:id="@+id/textCurrentuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/control_horizontal_margin"
            android:layout_toRightOf="@+id/textView15"
            android:text="whjerot"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/HintTextColor"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView15"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/control_vertical_margin"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/action_button_drawing_padding"
            android:drawableRight="@drawable/ic_go"
            android:text="@string/log_out"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/ActionTextColor" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout2"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginBottom="@dimen/control_vertical_margin"
        android:layout_marginTop="@dimen/control_vertical_margin"
        android:paddingBottom="@dimen/control_vertical_margin"
        android:paddingTop="@dimen/control_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkAutoConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/control_vertical_margin"
                android:button="@drawable/checkbox_selector"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/setting_option1"
                android:textColor="@color/HintTextColor" />

            <CheckBox
                android:id="@+id/checkAutoLaunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/control_vertical_margin"
                android:button="@drawable/checkbox_selector"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/setting_option2"
                android:textColor="@color/HintTextColor" />

            <CheckBox
                android:id="@+id/checkAutoReconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/control_vertical_margin"
                android:button="@drawable/checkbox_selector"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/setting_option3"
                android:textColor="@color/HintTextColor" />

            <CheckBox
                android:id="@+id/checkSwithoffRoaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/control_vertical_margin"
                android:button="@drawable/checkbox_selector"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/setting_option4"
                android:visibility="gone"
                android:textColor="@color/HintTextColor" />
            
            <CheckBox
                android:id="@+id/checkAllDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/control_vertical_margin"
                android:button="@drawable/checkbox_selector"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/setting_option7"
                android:textColor="@color/HintTextColor" />
            
            <CheckBox
                android:id="@+id/checkKillInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/control_vertical_margin"
                android:button="@drawable/checkbox_selector"
                android:paddingLeft="@dimen/checkbox_padding"
                android:text="@string/setting_option8"
                android:textColor="@color/HintTextColor" />

            <Button
                android:id="@+id/buttonExport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Export Current Profile"
                />
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>